[metadata]
name = clsalarm
version = 0.1.0
description = An alarm clock for classes
long_description = file: README.md
long_description_content_type = text/markdown
author = Chang Liu
author_email = acciochris@163.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    homepage = https://github.com/acciochris/clsalarm

[options]
py_modules = alarm
install_requires =
    playsound

python_requires = >=3.6

[bdist_wheel]
universal = 1
